syntax = "proto3";

option go_package = "./internal/proto";

service UserService {
  rpc Signup(SignupReq) returns (SignupResp){}
  rpc Login(LoginReq) returns (LoginResp){}
  rpc Authz(AuthzReq) returns (AuthzResp){}
  rpc Get(GetUserReq) returns (GetUserResp){}
}

service WalletService {
  rpc Get(GetWalletReq) returns (GetWalletResp){}
  rpc Transfer(TransferReq) returns (TransferResp){}
}

message SignupReq {
  string email = 1;
  string password = 2;
  string name = 3;
}

message SignupResp {
}

message LoginReq {
  string email = 1;
  string password = 2;
}

message LoginResp {
  string token = 1;
}

message AuthzReq {
  string token = 1;
  string resource = 2;
}

message AuthzResp {

}

message GetUserReq {
  uint64 id = 1;
}

message GetUserResp {
  User user = 1;
}

message GetWalletReq {
}

message GetWalletResp {
  int64 balance = 1;
  string currency = 2;
}

message TransferReq {
  uint64 from_user = 1;
  string to_email = 2;
  int64 amount = 3;
}

message TransferResp {
}

message User {
  uint64 id = 1;
  string email = 2;
  string hashed_password = 3;
  string name = 4;
  uint64 status = 5;
  uint64 version = 6;
  uint64 ctime = 7;
  uint64 mtime = 8;
}

message Wallet {
  uint64 id = 1;
  uint64 user_id = 2;
  int64 balance = 3;
  string currency = 4;
  uint64 status = 5;
  uint64 version = 6;
  uint64 ctime = 7;
  uint64 mtime = 8;
}